# AppCenterServer

./: .env  Cargo.toml  README.md
src/: main.rs  userauth.rs
src/static/: create_user.html
