[package]
name = "Googlag-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.4"
crypto = "0.5.1"
rand = "0.8.5"
semver = "1.0.22"
bytes = "1.5.0"
#block-modes = "0.9.1"
#rust-crypto = "0.2.36"
