[package]
name = "Googlag-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#[dependencies]
#aes = "0.8.4"
#crypto = "0.5.1"
#rand = "0.8.5"
#semver = "1.0.22"
#bytes = "1.5.0"
#actix-web = "4.0"
#actix-identity = "0.7.1"
#serde = { version = "1.0", features = ["derive"] }
#sqlx = { version = "0.7.4", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "time"] }
#dotenv = "0.15"
#tokio = { version = "1", features = ["full"] }
#chrono = "0.4.35"
#rust-crypto = "0.2.36"

[dependencies]
actix-web = "4.0"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"]}
sqlx = { version = "0.7.4", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
dotenv = "0.15"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.7.0", features = ["v4", "serde"] }
serde_json = "1.0.114" # Adjust if you're directly using Uuid in your Rust code.
json = "0.12"
actix = "0.13.3"
actix-web-actors = "4.0"
jsonwebtoken = "9.2.0"
lazy_static = "1.4.0"